<resources>
    <string name="app_name">MavsdkAndroidSerialTest</string>

    <string name="str_distance">Distance</string>
    <string name="str_height">Height</string>
    <string name="str_charge">Charge</string>
    <string name="str_voltage">Voltage</string>
    <string name="str_latitude">Latitude</string>
    <string name="str_longitude">Longitude</string>

    <string name="str_usb_device_not_found">USB device not found</string>
    <string name="str_usb_permission_not_granted">USB permission not granted</string>
</resources>