<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/tv_main_label_distance"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_data_distance"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/tv_main_label_distance"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_distance"
        tools:text="10" />

    <TextView
        android:id="@+id/tv_main_label_height"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_height"
        app:layout_constraintStart_toStartOf="@+id/tv_main_label_distance"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_label_distance" />

    <TextView
        android:id="@+id/tv_main_data_height"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/tv_main_data_distance"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_height"
        tools:text="20" />

    <TextView
        android:id="@+id/tv_main_label_battery_charge"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_charge"
        app:layout_constraintStart_toStartOf="@+id/tv_main_label_height"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_label_height" />

    <TextView
        android:id="@+id/tv_main_data_battery_charge"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/tv_main_data_height"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_battery_charge"
        tools:text="50%" />

    <TextView
        android:id="@+id/tv_main_label_battery_voltage"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_voltage"
        app:layout_constraintStart_toStartOf="@+id/tv_main_label_battery_charge"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_label_battery_charge" />

    <TextView
        android:id="@+id/tv_main_data_battery_voltage"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/tv_main_data_battery_charge"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_battery_voltage"
        tools:text="10" />

    <TextView
        android:id="@+id/tv_main_label_latitude"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_latitude"
        app:layout_constraintStart_toStartOf="@+id/tv_main_label_battery_voltage"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_label_battery_voltage" />

    <TextView
        android:id="@+id/tv_main_data_latitude"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/tv_main_data_battery_voltage"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_latitude"
        tools:text="14.98" />

    <TextView
        android:id="@+id/tv_main_label_longitude"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/str_longitude"
        app:layout_constraintStart_toStartOf="@+id/tv_main_label_latitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_label_latitude" />

    <TextView
        android:id="@+id/tv_main_data_longitude"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/tv_main_data_latitude"
        app:layout_constraintTop_toTopOf="@+id/tv_main_label_longitude"
        tools:text="50.81" />


</androidx.constraintlayout.widget.ConstraintLayout>